# fnd

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test_and_publish.yml
examples/: custom_filter.py  fd_vs_find_vs_fnd.py
src/fnd/: __init__.py  core.py
tests/: README.md  conftest.py  run_matrix.sh  test_core.py
