[project]
name = "fnd"
version = "0.1.1"
description = "A Fast and Simple File Search Tool in Python 一个快速简单的文件搜索工具"
readme = "README.md"
authors = [
    { name = "DBinK", email = "DBinKv1@Gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "codetiming>=1.4.0",
    "rich>=15.0.0",
]
